<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="isLoading"
            type="boolean" />
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/cardview_light_background"
        android:orientation="vertical"
        tools:ignore="PrivateResource">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="vertical"
            app:visibleGone="@{isLoading}">

            <ProgressBar
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp" />

            <TextView
                android:id="@+id/loading_projects"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:text="@string/loading_projects" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/recycler_layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/cardview_light_background"
            android:orientation="vertical"
            android:visibility="gone">

            <RadioGroup
                android:id="@+id/time_sort"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/day"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:padding="4dp"
                    android:text="@string/day" />

                <RadioButton
                    android:id="@+id/week"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:padding="4dp"
                    android:text="@string/week" />

                <RadioButton
                    android:id="@+id/month"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:padding="4dp"
                    android:text="@string/month" />

            </RadioGroup>


            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/project_list"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:contentDescription="@string/project_list"
                app:layoutManager="LinearLayoutManager" />

        </LinearLayout>

        <FrameLayout
            android:id="@+id/error_layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:visibility="gone">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_gravity="center">

                <TextView
                    android:id="@+id/error_tv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center" />

                <Button
                    android:id="@+id/refresh_button"
                    android:layout_marginTop="@dimen/view_start_margin"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/refresh" />
            </LinearLayout>
        </FrameLayout>

    </LinearLayout>
</layout>