<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="project"
            type="appsdealer.githubtest.api.model.Items" />

        <variable
            name="callback"
            type="appsdealer.githubtest.ui.callback.ProjectClickCallback" />
    </data>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/item_horizontal_margin"
        android:layout_marginEnd="@dimen/item_horizontal_margin"
        android:onClick="@{() ->  callback.onClick(project)}"
        android:orientation="horizontal"
        app:cardUseCompatPadding="true">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/item_horizontal_margin"
            android:layout_marginEnd="@dimen/item_horizontal_margin"
            android:orientation="vertical"
            android:padding="5dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <de.hdodenhof.circleimageview.CircleImageView
                    android:id="@+id/ownerProfilePhoto"
                    android:layout_width="@dimen/image_size"
                    android:layout_height="@dimen/image_size"
                    app:civ_border_color="@color/colorWhite"
                    app:civ_border_width="2dp" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/view_start_margin"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/name"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:contentDescription="@string/user_name"
                        android:text="@{project.owner.login}"
                        android:textColor="@android:color/black"
                        android:textSize="@dimen/project_text"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/project_name"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:contentDescription="@string/project_name"
                        android:text="@{project.name}"
                        android:textSize="@dimen/project_text" />

                </LinearLayout>
            </LinearLayout>


            <TextView
                android:id="@+id/description"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:maxLines="2"
                android:ellipsize="end"
                android:contentDescription="@string/description"
                android:textSize="@dimen/project_text" />

        </LinearLayout>

    </androidx.cardview.widget.CardView>
</layout>